  * Add note about preseeding ownership to preseed-seenflag section, since I
    had a user confused by this who hadn't found the note elsewhere
    explaining owners.
  * Use /dev/sda and /dev/sdb in the RAID preseeding example rather than
    /dev/discs/disc0/disc and /dev/discs/disc1/disc, since the latter
    devices no longer exist.

  [ Frans Pop ]
  * Document preseeding of network-console now that its postinst can be
    relied on to be executed.
  * Update info on passing boot parameter for PPPoE.

 -- Frans Pop <fjp@debian.org>  Fri, 16 Jan 2009 18:07:04 +0100

installation-guide (20081208) unstable; urgency=low

  * Move documentation files to separate subdirectory doc.
  * Document how the manual is built for the Debian website.
  * Correct error spotted by Osamu Aoki: text web browser is w3m, not w3c.
  * Correct two minor errors in preconfiguration examples. With thanks to
    Andreas Beckmann for reporting them. Closes: #507544.
  * Add new script check-preseed to help translators check if their
    translation of the appendix about preseeding is complete/correct.
  * Re-enable Spanish translation.

 -- Frans Pop <fjp@debian.org>  Mon, 08 Dec 2008 09:50:48 +0100

installation-guide (20081113) unstable; urgency=medium

  [ Martin Michlmayr ]
  * Remove everything about DECstation since these machines are
    no longer supported.
  * Provide information about all iop32x and orion5x installation media.
  * Describe Orion and Versatile as supported platforms.
  * Fix the NSLU2 download link.
  * Describe MIPS Malta.
  * Document netcfg/get_gateway=none

  [ Frans Pop ]
  * Update copyright to 2008.
  * Update description of country selection in line with recent changes in
    localechooser.
  * Request output of lspci -knn in installation reports.
  * Apply patch from Frank Lichtenheld to improve netboot instructions for
    PowerPC. Closes: #275565.

  [ Joey Hess ]
  * Comment out partman-auto/disk setting in preseed since lenny d-i will