@@ -475,6 +475,17 @@ performing a normal installation. See <xref linkend="rescue"/>.
 </para></listitem>
 </varlistentry>
 
+<varlistentry condition="squeeze">
+<term>noshell</term>
+<listitem><para>
+
+Normally, the installer offers convenience shells on tty2 and tty3 that can
+be used for debugging. This boot parameter disables these shells, which may
+be useful for unattended installations in a public place.
+
+</para></listitem>
+</varlistentry>
+
 </variablelist>
 
    <sect3 id="preseed-args">
